# vibe-kanban

./: README.md  TEST.md  package.json  pnpm-lock.yaml
crates/db/: Cargo.toml
crates/deployment/: Cargo.toml
crates/executors/: Cargo.toml  default_profiles.json
crates/executors/src/: mcp_config.rs
crates/executors/src/executors/: iflow.rs  mod.rs
crates/local-deployment/: Cargo.toml
crates/remote/: Cargo.toml
crates/server/: Cargo.toml  build.rs
crates/server/src/routes/: oauth.rs  projects.rs
crates/services/: Cargo.toml
crates/utils/: Cargo.toml
docs/: AGENTS.md  supported-coding-agents.mdx
docs/agents/: iflow.mdx
frontend/: package.json
frontend/src/hooks/: useJsonPatchWsStream.ts  websocketConnectionManager.ts
npx-cli/: package.json
shared/schemas/: iflow.json
