[package]
name = "deployment"
version = "0.0.143"
edition = "2024"

[dependencies]
db = { path = "../db" }
utils = { path = "../utils" }
services = { path = "../services" }
executors = { path = "../executors" }
async-trait = { workspace = true } 
thiserror = { workspace = true } 
anyhow = { workspace = true }
tokio = { workspace = true }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "macros", "sqlite", "tls-native-tls"] }
serde_json = { workspace = true }
tracing = { workspace = true }
git2 = "^0.18.1"
futures = "0.3.31"
axum = { workspace = true }

